--- a/exampleSite/content/about/dtitle.html
+++ b/exampleSite/content/about/dtitle.html
@@ -1,1 +1,1 @@
-<p>This description is about Hugo.<d-footnote>HTML loaded from <i>dtitle.html</i></d-footnote></p>
+<p>The following page is about Hugo. Hover over the footnote. <d-footnote>HTML loaded from <i>dtitle.html</i></d-footnote></p>
